@@ -1,5 +1,11 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-assistant.c (assistant_set_link): Use
+	dh_util_build_data_filename to point to the assistant javascript
+	and css files. Make the title a link.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/dh-util.[ch]: (dh_util_build_data_filename): New function to
 	get a filename in devhelp's data directory, works like
 	g_build_filename.
